Update facts-writeup.html with difficulty and description
Added difficulty level and description to the writeup.

--- a/CTFs/facts-writeup.html
+++ b/CTFs/facts-writeup.html
@@ -4,6 +4,7 @@ title: "Facts HackTheBox Writeup"
 date: 2026-02-09
 pid: "0209"
 category: "CTFs"
+difficulty: "EASY"
 description: "A penetration-testing-style writeup showing how multiple vulnerabilities were chained to gain root access."
 tags: [CTF, HTB, Root]
 ---
